Added images to directory and linked them to the folder instead of a URL online

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Spaghetti Carbonara</h1>
-    <img src="https://www.simplyrecipes.com/thmb/23JkcxcrcByNetn2AcsxovTpld4=/648x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Simply-Recipes-Spaghetti-Carbonara-LEAD-6-b3880a6eb49f4158be6f13885c797ded.jpg" alt="A picture of Spaghetti Carbonara on a plate">
+    <img src="/images/carbonara.jpg" alt="A picture of Spaghetti Carbonara on a plate">
     
     <h2>Description</h2>
       <p>This dish is a creamy mixture of spaghetti, eggs and cheese topped with parmesan chunks for a delicious marriage of flavour</p>
