--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>French Omelette</h1>
-    <img src="https://www.seriouseats.com/thmb/fAuM8bc68vf7bS39ilWB0T3ryGk=/1500x1125/filters:fill(auto,1)/__opt__aboutcom__coeus__resources__content_migration__serious_eats__seriouseats.com__recipes__images__2016__04__20160323-french-omelet-vicky-wasik--31-d2675fbb85364278b3fb8cd092c81882.jpg" alt="">
+    <img src="/images/omelette.jpg" alt="">
 
     <h2>Description</h2>
         <p>A classic french omelette that should be in every chefs arsenal, with a cheesy twist to be a little bit cheeky</p>
