--- a/recipes/saagpaneer.html
+++ b/recipes/saagpaneer.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Saag Paneer</h1>
-    <img src="https://ichef.bbci.co.uk/food/ic/food_16x9_832/recipes/spinach_paneer_41837_16x9.jpg" alt="A picture of Saag Paneer">
+    <img src="/images/saagpaneer.jpg" alt="A picture of Saag Paneer">
 
     <h2>Description</h2>
         <p>A punjab version of a classic indian dish, Saag Paneer is a spinach curry-esque dish with big chunks of fried paneer cheese, to give a bit of bite into this amazing and popular dish across the world.</p>
