--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
+    <div class="container">
+    <h1 class="titlebar">Odin Recipes</h1>
+    <div class="list"><ul>
     <li><a href="./recipes/carbonara.html">Spaghetti Carbonara</a></li>
     <li><a href="./recipes/omelette.html">French Omelette</a></li>
     <li><a href="./recipes/saagpaneer.html">Saag Paneer</a></li>
-</ul>
+</ul></div> 
+</div>  
 </body>
 </html>
