--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -2,15 +2,21 @@
 <html lang="en">
 <head>
     <title>French Omelette</title>
+    <link rel="stylesheet" href="/recipes/style.css">
 </head>
 <body>
-    <h1>French Omelette</h1>
+    <div class="container">
+        <div class="title">
+    <h1 class="header titlebar">French Omelette</h1>
+    </div>
+    <div class="picture">
     <img src="/images/omelette.jpg" alt="">
-
-    <h2>Description</h2>
+    </div>
+    <div class="contents">
+    <h2 class="titlebar">Description</h2>
         <p>A classic french omelette that should be in every chefs arsenal, with a cheesy twist to be a little bit cheeky</p>
 
-    <h3>Ingredients</h3>
+    <h3 class="titlebar">Ingredients</h3>
     <ul>
         <li>3 large eggs</li>
         <li>Kosher salt and freshly ground white or black pepper</li>
@@ -18,7 +24,7 @@
         <li>1 ounce (30g) grated cheese, such as Gruyère, cheddar, or Swiss</li>
     </ul>
 
-    <h3>Steps</h3>
+    <h3 class="titlebar">Steps</h3>
     <ol>
         <li>In a medium bowl, beat eggs with a disposable plastic or reusable wooden fork just until last traces of white are mixed in; season with salt and pepper.</li>
         <li>In a perfectly unscratched 8-inch nonstick skillet, melt butter, swirling over moderate heat, until fully melted and foamy but not browned. Add eggs and stir rapidly with fork, tines up, while shaking pan to agitate eggs; make sure to move fork all around pan to break up curds and scrape them from bottom of skillet as they form. Stop stirring as soon as eggs are very softly scrambled and creamy (but still loose enough to come together into a single mass), 1 to 2 minutes.</li>
@@ -26,7 +32,10 @@
         <li>Remove from heat, tilt skillet up by its handle, and, using fork, gently roll omelette down over itself until it is nearly folded in half. Using fork, push omelette to edge of skillet so that lower edge of egg begins to just barely overhang; use fork to fold overhanging edge of egg up, closing the omelette.</li>
         <li>Hold skillet right over plate and turn omelette out onto it. It should be almond- or cigar-shaped, with the seam on bottom; if it's not, lay a clean kitchen towel over it and use your hands to adjust its shape and position, then remove towel. Serve. (To make another omelette, wipe any eggy bits out of skillet and repeat.)</li>
     </ol>
-
+    </div>
+    <div class="footer">
     <a href="/index.html">Back to Recipes List</a>
+    </div> 
+    </div>
 </body>
 </html>
