--- a/recipes/saagpaneer.html
+++ b/recipes/saagpaneer.html
@@ -2,15 +2,21 @@
 <html lang="en">
 <head>
     <title>Saag Paneer</title>
+    <link rel="stylesheet" href="/recipes/style.css">
 </head>
 <body>
-    <h1>Saag Paneer</h1>
+    <div class="container">
+        <div class="header">
+    <h1 class="header titlebar">Saag Paneer</h1>
+    </div>
+    <div class="picture">
     <img src="/images/saagpaneer.jpg" alt="A picture of Saag Paneer">
-
-    <h2>Description</h2>
+    </div>
+    <div class="contents">
+    <h2 class="titlebar">Description</h2>
         <p>A punjab version of a classic indian dish, Saag Paneer is a spinach curry-esque dish with big chunks of fried paneer cheese, to give a bit of bite into this amazing and popular dish across the world.</p>
 
-    <h3>Ingredients</h3>
+    <h3 class="titlebar">Ingredients</h3>
     <ul>
         <li>2 bunches large-leaf spinach (250g/9oz)</li>
         <li>vegetable oil, for frying</li>
@@ -27,14 +33,16 @@
         <li>2 tbsp very fine polenta</li>
     </ul>
 
-    <h3>Steps</h3>
+    <h3 class="titlebar">Steps</h3>
     <ol>
         <li>Thoroughly wash the spinach under cold running water to remove any dirt. Roughly chop, including the stems, then transfer to a large saucepan. Pour over just enough cold water to cover the spinach. Bring to the boil over a high heat, cover with a lid and reduce the heat. Simmer for around 20–25 minutes, checking from time to time (or reduce cooking time and water as per the tip below). Remove the lid for the last 5–10 minutes and cook until the water has evaporated.</li>
         <li>Meanwhile, heat a large frying pan over a medium–high heat and, once hot, add a generous glug of vegetable oil. Add the paneer cubes and shallow fry for a few minutes, turning frequently until golden brown. Remove with a slotted spoon and transfer to a bowl or plate lined with kitchen paper. Set aside.</li>
         <li>Wipe the pan clean and heat the butter. Once melted, add the onion, chilli, garlic and ginger and cook for around 5–10 minutes, or until softened and starting to brown. Add the salt, cumin seeds, garam masala and turmeric and cook, stirring all the time, for a few minutes. Add the paneer and stir to coat in the onion and spice mixture. Remove the pan from the heat and set aside.</li>
         <li>Once all the water has evaporated from the spinach, add the cornmeal to the pan and using a masher, blend the spinach together and mash until smooth but with some texture. It should be a thick consistency. Alternatively use an electric hand blender to combine, and blend with a knob of butter (optional). Once blended, tip in the warm onion, spice and paneer mixture and mix together. Transfer to a serving bowl and serve immediately.</li>
     </ol>
-
+    </div>
+    <div class="footer">
     <a href="/index.html">Back to Recipes List</a>
+    </div>
 </body>
 </html>
