--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -2,15 +2,21 @@
 <html lang="en">
 <head>
     <title>Carbonara Recipe</title>
+    <link rel="stylesheet" href="/recipes/style.css">
 </head>
 <body>
-    <h1>Spaghetti Carbonara</h1>
+  <div class="container">
+    <div class="title">
+    <h1 class="header titlebar">Spaghetti Carbonara</h1>
+    </div>
+    <div class="picture">
     <img src="/images/carbonara.jpg" alt="A picture of Spaghetti Carbonara on a plate">
-    
-    <h2>Description</h2>
+    </div>
+    <div class="contents">
+    <h2 class="titlebar desc">Description</h2>
       <p>This dish is a creamy mixture of spaghetti, eggs and cheese topped with parmesan chunks for a delicious marriage of flavour</p>
     
-    <h3>Ingredients</h3>
+    <h3 class="titlebar">Ingredients</h3>
     <ul>
         <li>100g pancetta</li>
         <li>50g pecorino cheese</li>
@@ -22,7 +28,7 @@
         <li>sea salt and freshly ground black pepper</li>
     </ul>
 
-    <h3>Steps</h3>
+    <h3 class="titlebar">Steps</h3>
       <ol>
         <li>Put a large saucepan of water on to boil.</li>
         <li>Finely chop the 100g pancetta, having first removed any rind. Finely grate 50g pecorino cheese and 50g parmesan and mix them together.</li>
@@ -37,7 +43,10 @@
         <li>Add extra pasta cooking water to keep it saucy (several tablespoons should do it). You don’t want it wet, just moist. Season with a little salt, if needed.</li>
         <li>Use a long-pronged fork to twist the pasta on to the serving plate or bowl. Serve immediately with a little sprinkling of the remaining cheese and a grating of black pepper. If the dish does get a little dry before serving, splash in some more hot pasta water and the glossy sauciness will be revived.</li>       
       </ol>
-
+      </div>
+      <div class="footer">
       <a href="/index.html">Back to Recipes List</a>
+      </div>
+      </div>
 </body>
 </html>
